--- a/Web/Vegan Shop/Dockerfile
+++ b/Web/Vegan Shop/Dockerfile
@@ -2,6 +2,11 @@ FROM python:3.9-slim
 
 WORKDIR /app
 
+# Install curl (and clean up cache to keep image small)
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends curl && \
+    rm -rf /var/lib/apt/lists/*
+
 COPY app/ /app/
 COPY flag.txt /flag.txt
 
