--- a/Forensic/forensic-easy/docker-compose.yml
+++ b/Forensic/forensic-easy/docker-compose.yml
@@ -7,4 +7,9 @@ services:
     ports:
       - "4017:4017"
     restart: always
-
+    healthcheck:
+      test: ["CMD", "bash", "-c", "</dev/tcp/localhost/4017"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 10s
