--- a/PWN/kpopdatabase/docker-compose.yml
+++ b/PWN/kpopdatabase/docker-compose.yml
@@ -6,3 +6,9 @@ services:
     ports:
       - "4010:4010"
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "bash", "-c", "</dev/tcp/localhost/4010"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 10s
