--- a/PWN/weebs/docker-compose.yml
+++ b/PWN/weebs/docker-compose.yml
@@ -13,3 +13,9 @@ services:
       - no-new-privileges:true
     cap_drop:
       - ALL
+    healthcheck:
+      test: ["CMD", "bash", "-c", "</dev/tcp/localhost/4012"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 10s
