--- a/Web/digishop/docker-compose.yml
+++ b/Web/digishop/docker-compose.yml
@@ -7,4 +7,9 @@ services:
     ports:
       - "4002:4002"
     restart: unless-stopped
-
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:4002/"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 10s
