--- a/Web/grapter/docker-compose.yml
+++ b/Web/grapter/docker-compose.yml
@@ -10,4 +10,10 @@ services:
     ports:
       - "4003:4003"
     command: uvicorn src.app:app --host 0.0.0.0 --port 4003
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:4003/"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 10s
 
