--- a/Web/legalshop/docker-compose.yml
+++ b/Web/legalshop/docker-compose.yml
@@ -6,3 +6,9 @@ services:
       - "4004:4004"
     environment:
       - FLAG=JCC25{21d0de263340212445da6c141d50c14f}
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:4004/"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 10s
